--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "draggable-resizable-vue3": "^1.0.94-beta",
+    "masonry-layout": "^4.2.2",
     "pinia": "^3.0.1",
     "prismjs": "^1.30.0",
     "quasar": "^2.16.0",
