--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.1",
     "draggable-resizable-vue3": "^1.0.94-beta",
     "imagesloaded": "^5.0.0",
+    "lottie-web": "^5.13.0",
     "masonry-layout": "^4.2.2",
     "pinia": "^3.0.1",
     "prismjs": "^1.30.0",
